--- a/Sistema_Examen/src/GUI/frmCrearExamen.form
+++ b/Sistema_Examen/src/GUI/frmCrearExamen.form
@@ -267,6 +267,7 @@
                 <Property name="componentPopupMenu" type="javax.swing.JPopupMenu" editor="org.netbeans.modules.form.ComponentChooserEditor">
                   <ComponentRef name="popMenu"/>
                 </Property>
+                <Property name="inheritsPopupMenu" type="boolean" value="true"/>
               </Properties>
               <Events>
                 <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lstSeccionesMouseEntered"/>
