--- a/Sistema_Examen/src/GUI/frmCrearSeccion.form
+++ b/Sistema_Examen/src/GUI/frmCrearSeccion.form
@@ -163,6 +163,7 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder title="Preguntas">
+              <Font PropertyName="font" name="Dialog" size="12" style="1"/>
               <Color PropertyName="color" blue="ff" green="66" red="0" type="rgb"/>
             </TitledBorder>
           </Border>
